k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-service
  labels:
   app: devops-project-service
spec:
  type: NodePort
  selector:
    app: devops-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
