k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-project-ingress
spec:
  rules:
  - host: devops-project
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-project-service
            port:
              number: 80
